--- a/src/Header.css
+++ b/src/Header.css
@@ -1,7 +1,7 @@
 header {
     display: grid;
-    gap: 20px;
-    grid-template-columns: repeat(2, 20px) repeat(2, 150px);
+    gap: 5px;
+    grid-template-columns: repeat(2, 2rem) repeat(2, 5rem);
 }
 
 dialog {
